--- a/css/custom.css
+++ b/css/custom.css
@@ -119,7 +119,7 @@ section{
     min-height: 800px;
     display:flex;
     align-items:center;
-    background-image:url(slika/usedcars.jpg);
+    background-image:url(../slika/usedcars.jpg);
     background-repeat:no-repeat;
     background-size:cover;
     background-position:center left;
