--- a/css/adding-ad.css
+++ b/css/adding-ad.css
@@ -1,127 +1,126 @@
 :root {
-    --font-family: 'Encode Sans Expanded', sans-serif;
+  --font-family: "Encode Sans Expanded", sans-serif;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .new-ad {
-    padding: 2rem 1rem;
+  padding: 2rem 1rem;
 }
 
 .new-ad h1 {
-    font-size: xx-large;
-    text-align: center;
-    margin-bottom: 2rem;
+  font-size: xx-large;
+  text-align: center;
+  margin-bottom: 2rem;
 }
 
 .ad-parts {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 1rem;
+  display: flex;
+  /* grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 1rem; */
+  flex-direction: column;
 }
 
 .ad-part {
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    width: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  margin: 0.35rem 0;
 }
 
 .ad-part label {
-    text-align: left;
-    margin: 0;
-    width: 30%;
-    margin-right: 10%;
+  width: 30%;
+  text-align: left;
+  margin: 0;
 }
 
 .ad-part select,
 .ad-part input {
-    margin: 0;
-    width: 50%;
-    border: .5px solid black;
+  width: 35%;
+  margin: 0;
+  border: 0.5px solid black;
 }
 
-.submit-btn {
-    display: inline-block;
-    margin: 2rem 0 1rem;
-    background-color: pink;
-    color: black;
-    border: .5px solid black;
-    cursor: pointer;
-    border-radius: .25em;
-    font-family: var(--font-family);
-    font-weight: bold;
-    padding: .5em 1.25em;
-    font-size: medium;
+.submit-btn,
+.file-upload-label {
+  display: inline-block;
+  margin: 1rem 0;
+  background-color: pink;
+  color: black;
+  border: 0.5px solid black;
+  cursor: pointer;
+  border-radius: 0.25em;
+  font-family: var(--font-family);
+  font-weight: bold;
+  padding: 0.5em 1.25em;
+  font-size: medium;
 }
 
 @media screen and (min-width: 500px) {
-    .ad-part {
-        width: 80%;
-        margin: 0 auto;
-        justify-content: space-around;
-    }
-
-    .ad-part label {
-        width: 40%;
-        margin-right: 5%;
-    }
-
-    .ad-part select,
-    .ad-part input {
-        width: 40%;
-    }
-
-    .submit-btn {
-        display: block;
-        margin: 1.5rem auto;
-    }
+  .submit-btn {
+    display: block;
+    margin: 1.5rem auto;
+  }
 }
 
 @media screen and (min-width: 700px) {
-    .ad-part {
-        width: 65%;
-    }
+  .ad-part input,
+  .ad-part select {
+    width: 30%;
+  }
 }
 
 @media screen and (min-width: 850px) {
-    .ad-parts {
-        grid-template-columns: 1fr 1fr;
-        grid-gap: 1em 3em;
-    }
+  .ad-parts div {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1rem;
+  }
 
-    .ad-part {
-        width: 100%;
-    }
+  .ad-part label,
+  .ad-part input,
+  .ad-part select {
+    width: 80%;
+  }
 
-    .ad-part label {
-        margin-right: 0;
-    }
+  .textarea {
+    width: 60%;
+    margin: 0 auto;
+  }
 }
 
 @media screen and (min-width: 1050px) {
-    .ad-parts {
-        margin: 0 auto;
-        width: 80%;
-    }
+  .submit-btn {
+    display: block;
+    margin: 2.5rem auto 1.5rem;
+  }
 
-    .submit-btn {
-        display: block;
-        margin: 2.5rem auto 1.5rem;
-    }
+  .textarea {
+    width: 45%;
+  }
 }
 
 @media screen and (min-width: 1350px) {
-    .ad-parts {
-        width: 100%;
-        grid-template-columns: 1fr 1fr 1fr;
-    }
-}
+  .ad-parts {
+    width: 90%;
+    margin: 0 auto;
+  }
 
-@media screen and (min-width: 1350px) {
-    .ad-parts {
-        width: 80%;
-    }
+  .ad-parts div {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 1.5rem;
+  }
+
+  .ad-part label,
+  .ad-part input,
+  .ad-part select {
+    width: 100%;
+  }
+
+  .textarea {
+    width: 75%;
+  }
 }
